--- a/Diagnosis.App/Controls/Directory/WordTreeItem.xaml
+++ b/Diagnosis.App/Controls/Directory/WordTreeItem.xaml
@@ -90,7 +90,7 @@
                 </Button>-->
                 <Button Command="{Binding SendToSearchCommand}"
                         Margin="10,0,0,0"
-                        ToolTip="Искать (Alt + F)">
+                        ToolTip="Искать (Ctrl + F)">
                     <Image Source="{StaticResource findImage}" />
                 </Button>
             </StackPanel>
