--- a/Diagnosis.App/Controls/Search/Tag.xaml
+++ b/Diagnosis.App/Controls/Search/Tag.xaml
@@ -182,7 +182,7 @@
                     <MenuItem Header="Удалить"
                               Command="{Binding DeleteCommand}" />
                     <MenuItem Header="Искать"
-                              InputGestureText="Alt + F"
+                              InputGestureText="Ctrl + F"
                               Command="{Binding SendToSearchCommand}" />
                     <Separator />
 
