--- a/Diagnosis.App/Screens/Words.xaml
+++ b/Diagnosis.App/Screens/Words.xaml
@@ -43,7 +43,7 @@
                     <Image Source="{StaticResource findImage}" />
                     <TextBlock>
                         <Run IsEnabled="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType=Button}}"
-                             ToolTip="Искать выбранные слова (Alt + F)">Искать</Run>
+                             ToolTip="Искать выбранные слова (Ctrl + F)">Искать</Run>
                     </TextBlock>
                 </DockPanel>
             </Button>
@@ -125,7 +125,7 @@
                                           Command="{Binding EditCommand}" />
                                 <!--WordsListViewModel-->
                                 <MenuItem Header="Искать"
-                                          InputGestureText="Alt + F"
+                                          InputGestureText="Ctrl + F"
                                           Command="{Binding PlacementTarget.Tag.SendToSearchCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
                                 <MenuItem Header="Удалить"
                                           InputGestureText="Del"
