--- a/Diagnosis.App/Windows/Shell/MainWindow.xaml
+++ b/Diagnosis.App/Windows/Shell/MainWindow.xaml
@@ -58,8 +58,11 @@
     </Window.Resources>
 
     <Window.InputBindings>
-        <KeyBinding Key="F"
-                    Modifiers="Control"
+        <KeyBinding Modifiers="Control"
+                    Key="F"
+                    Command="{Binding OpenSearchCommand}" />
+        <KeyBinding Modifiers="Control"
+                    Key="E"
                     Command="{Binding OpenSearchCommand}" />
     </Window.InputBindings>
     <Window.CommandBindings>        
