autocomplete. Add StartEdit to fix focus after ctrl+j

--- a/Diagnosis.App/Controls/Search/Autocomplete.xaml
+++ b/Diagnosis.App/Controls/Search/Autocomplete.xaml
@@ -60,6 +60,7 @@
                  dd:DragDrop.DragHandler="{Binding DragHandler}"
                  GotFocus="input_GotFocus"
                  LostFocus="input_LostFocus"
+                 GotKeyboardFocus="input_GotKeyboardFocus"
                  PreviewKeyDown="input_PreviewKeyDown"
                  PreviewKeyUp="input_PreviewKeyUp"
                  SelectionChanged="input_SelectionChanged">
