--- a/Diagnosis.App/Controls/Headers/Appointment.xaml
+++ b/Diagnosis.App/Controls/Headers/Appointment.xaml
@@ -1,14 +1,19 @@
 ﻿<UserControl x:Class="Diagnosis.App.Controls.Headers.Appointment"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:headers="clr-namespace:Diagnosis.App.Controls.Headers"
              d:DesignHeight="300"
-             d:DesignWidth="300">
-    <!-- Appointment -->
-    <DockPanel MinWidth="70">
-        <TextBlock Text="{Binding DateAndTime, Converter={StaticResource DateLabel}}"
-                   DockPanel.Dock="Top" />
-    </DockPanel>
+             d:DesignWidth="300"
+             x:Name="appointment"
+             mc:Ignorable="d">
+    <!--  Appointment or VM  -->
+    <StackPanel Orientation="Horizontal">
+        <TextBlock Text="{Binding DateAndTime,
+                                  Converter={StaticResource DateLabel}}" />
+        <TextBlock Visibility="{Binding TimeVisibility, RelativeSource={RelativeSource AncestorType=headers:Holder}}">
+            <Run Text="{Binding DateAndTime, StringFormat={}{0:H:mm}}" />
+        </TextBlock>
+    </StackPanel>
 </UserControl>
