--- a/Diagnosis.App/Controls/Editors/SexChooser.xaml
+++ b/Diagnosis.App/Controls/Editors/SexChooser.xaml
@@ -1,27 +1,20 @@
-﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Editors.SexChooser"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             x:Class="Diagnosis.App.Controls.Editors.SexChooser"
-             mc:Ignorable="d"
-             MinWidth="100"
-             d:DesignHeight="30"
-             d:DesignWidth="100">
-
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <RadioButton IsChecked="{Binding IsMale}"
-                     Content="муж" />
-        <RadioButton Grid.Column="1"
-                     IsChecked="{Binding IsFemale}"
-                     Content="жен" />
-        <RadioButton Grid.Column="2"
-                     Visibility="{Binding WithUnknown, Converter={StaticResource BooleanToVisibilityConverter}, RelativeSource={RelativeSource AncestorType=UserControl}}"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             d:DesignHeight="50"
+             d:DesignWidth="100"
+             mc:Ignorable="d">
+    <StackPanel>
+        <RadioButton Content="мужской"
+                     IsChecked="{Binding IsMale}" />
+        <RadioButton Content="женский"
+                     IsChecked="{Binding IsFemale}" />
+        <RadioButton Content="неизвестный"
                      IsChecked="{Binding UnknownSex}"
-                     Content="?" />
-    </Grid>
+                     Visibility="{Binding WithUnknown,
+                                          Converter={StaticResource BooleanToVisibilityConverter},
+                                          RelativeSource={RelativeSource AncestorType=UserControl}}" />
+    </StackPanel>
 </UserControl>
