--- a/Diagnosis.App/Styles/SharedStyles.xaml
+++ b/Diagnosis.App/Styles/SharedStyles.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!-- base control styles -->
-    <Style TargetType="Control"
-           x:Key="ErrorToolTip">
+    <!--  base control styles  -->
+    <Style x:Key="ErrorToolTip"
+           TargetType="Control">
         <Style.Triggers>
             <Trigger Property="Validation.HasError"
                      Value="true">
@@ -11,20 +11,20 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    <Style TargetType="TextBox"
-           BasedOn="{StaticResource ErrorToolTip}">
+    <Style BasedOn="{StaticResource ErrorToolTip}"
+           TargetType="TextBox">
         <Setter Property="Height"
                 Value="23" />
         <Setter Property="VerticalContentAlignment"
                 Value="Center" />
     </Style>
-    <Style TargetType="ComboBox"
-           BasedOn="{StaticResource ErrorToolTip}">
+    <Style BasedOn="{StaticResource ErrorToolTip}"
+           TargetType="ComboBox">
         <Setter Property="Height"
                 Value="23" />
     </Style>
-    <Style TargetType="DatePicker"
-           BasedOn="{StaticResource ErrorToolTip}">
+    <Style BasedOn="{StaticResource ErrorToolTip}"
+           TargetType="DatePicker">
         <Setter Property="FirstDayOfWeek"
                 Value="Monday" />
     </Style>
@@ -38,7 +38,7 @@
         </Style.Triggers>
     </Style>
 
-    <!-- buttons -->
+    <!--  buttons  -->
     <Style x:Key="DialogButtonsPanel"
            TargetType="{x:Type StackPanel}">
         <Setter Property="Orientation"
@@ -57,15 +57,15 @@
         </Style.Resources>
     </Style>
 
-    <Style TargetType="Button"
+    <Style x:Key="squareButton"
            BasedOn="{StaticResource {x:Type Button}}"
-           x:Key="squareButton">
+           TargetType="Button">
         <Setter Property="Width"
                 Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" />
     </Style>
 
-    <Style TargetType="Image"
-           x:Key="buttonIcon">
+    <Style x:Key="buttonIcon"
+           TargetType="Image">
         <Setter Property="Margin"
                 Value="0,0,5,0" />
         <Setter Property="Height"
@@ -77,15 +77,16 @@
     <Style x:Key="{x:Static ToolBar.ButtonStyleKey}"
            TargetType="{x:Type Button}">
         <Style.Triggers>
-            <DataTrigger Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}"
+            <DataTrigger Binding="{Binding IsEnabled,
+                                           RelativeSource={RelativeSource Self}}"
                          Value="False">
                 <Setter Property="Opacity"
                         Value="0.35" />
             </DataTrigger>
         </Style.Triggers>
         <Style.Resources>
-            <Style TargetType="Image"
-                   BasedOn="{StaticResource buttonIcon}">
+            <Style BasedOn="{StaticResource buttonIcon}"
+                   TargetType="Image">
             </Style>
         </Style.Resources>
     </Style>
@@ -101,7 +102,7 @@
         </Style.Resources>
     </Style>
 
-    <!-- DataGrid-->
+    <!--  DataGrid  -->
 
     <Style x:Key="CellStyle"
            TargetType="DataGridCell">
@@ -113,9 +114,9 @@
                 Value="False" />
     </Style>
 
-    <Style  x:Key="SelectableCellStyle"
-            TargetType="{x:Type DataGridCell}"
-            BasedOn="{StaticResource CellStyle}">
+    <Style x:Key="SelectableCellStyle"
+           BasedOn="{StaticResource CellStyle}"
+           TargetType="{x:Type DataGridCell}">
         <Style.Triggers>
             <Trigger Property="IsSelected"
                      Value="True">
@@ -125,38 +126,39 @@
         </Style.Triggers>
     </Style>
 
+    <!--  forms  -->
 
-    <!-- forms -->
-
-    <Style TargetType="DockPanel"
-           x:Key="formLine">
+    <Style x:Key="formLine"
+           TargetType="DockPanel">
         <Setter Property="Margin">
             <Setter.Value>
-                <Thickness Bottom="10"></Thickness>
+                <Thickness Bottom="10">
+                </Thickness>
             </Setter.Value>
         </Setter>
     </Style>
 
-    <Style TargetType="Label"
-           x:Key="label">
+    <Style TargetType="Label">
         <Setter Property="VerticalAlignment"
                 Value="Center" />
+        <Setter Property="ContentStringFormat"
+                Value="{}{0}:" />
     </Style>
-    <Style TargetType="Label"
-           x:Key="label120"
-           BasedOn="{StaticResource label}">
+    <Style x:Key="label120"
+           BasedOn="{StaticResource {x:Type Label}}"
+           TargetType="Label">
         <Setter Property="Width"
                 Value="120" />
     </Style>
-    <Style TargetType="Label"
-           x:Key="label90"
-           BasedOn="{StaticResource label}">
+    <Style x:Key="label90"
+           BasedOn="{StaticResource {x:Type Label}}"
+           TargetType="Label">
         <Setter Property="Width"
                 Value="90" />
     </Style>
 
-    <Style TargetType="TextBlock"
-           x:Key="watermark">
+    <Style x:Key="watermark"
+           TargetType="TextBlock">
         <Setter Property="VerticalAlignment"
                 Value="Center" />
         <Setter Property="Margin">
@@ -166,9 +168,9 @@
         </Setter>
     </Style>
 
-    <!-- misc -->
-    <Style TargetType="TextBlock"
-           x:Key="ScreenTitle">
+    <!--  misc  -->
+    <Style x:Key="ScreenTitle"
+           TargetType="TextBlock">
         <Setter Property="FontSize"
                 Value="20" />
     </Style>
