--- a/Diagnosis.App/Controls/Search/SearchTree.xaml
+++ b/Diagnosis.App/Controls/Search/SearchTree.xaml
@@ -3,6 +3,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
              xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
              x:Class="Diagnosis.App.Controls.Search.SearchTree"
              mc:Ignorable="d"
@@ -10,7 +11,6 @@
              d:DesignWidth="300"
              x:Name="searchTree"
              GotFocus="UserControl_GotFocus"
-             beh:EnhancedFocusScope.IsEnhancedFocusScope="True"
              LostFocus="UserControl_LostFocus">
     <!--PopupSearch<>-->
     <UserControl.Resources>
@@ -21,31 +21,17 @@
             <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="auto" />
-            </Grid.ColumnDefinitions>
-
-            <TextBox x:Name="input"
-                     Text="{Binding Filter.Query, UpdateSourceTrigger=PropertyChanged}"
-                     beh:FocusExtension.IsFocused="{Binding Filter.IsFocused, Mode=TwoWay}"
-                     PreviewKeyDown="input_PreviewKeyDown"
-                     GotMouseCapture="input_GotMouseCapture">
-                <controls:WatermarkService.Watermark>
-                    <TextBlock Style="{StaticResource watermark}">Код или описание</TextBlock>
-                </controls:WatermarkService.Watermark>
-
-                <!--<TextBox.InputBindings>
-                    <KeyBinding Key="Escape"
-                                Command="{Binding ToggleResultsVisibleCommand}" />
-                </TextBox.InputBindings>-->
-            </TextBox>
-            <Button Grid.Column="1"
-                    Content="×"
-                    Style="{StaticResource squareButton}"
-                    Command="{Binding Filter.ClearCommand}" />
-        </Grid>
+        <DockPanel>
+            <ToggleButton Content="Полный список"
+                          ToolTip="Список с подрубриками (например, А01.5)"
+                          IsChecked="{Binding DataContext.IcdTopLevelOnly, Mode=TwoWay, RelativeSource={RelativeSource AncestorType=Window}, Converter={StaticResource NegateBoolean}}" />
+            <search:Filter x:Name="input"
+                           Grid.Column="1"
+                           Margin="10,0,0,0"
+                           DataContext="{Binding Filter}"
+                           WatermarkText="Код или описание"
+                           PreviewInputKeyDown="input_PreviewKeyDown" />
+        </DockPanel>
         <DockPanel x:Name="popup"
                    Grid.Row="1"
                    Visibility="{Binding IsResultsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
